Delete unused files + factoring + added film's request from kinopoisk api
