# src/main/kotlin/com/ctacek/f2g/api/v1/routing/GameRoutes.kt
@@ -1,5 +1,14 @@
 package com.ctacek.f2g.api.v1.routing
 
+import com.ctacek.f2g.api.v1.requests.match.JoinRoomRequest
+import com.ctacek.f2g.domain.repositories.MatchRepository
+import com.ctacek.f2g.domain.repositories.RoomsRepository
+import com.ctacek.f2g.domain.repositories.UsersRepository
+import com.ctacek.f2g.domain.useCases.UseCases
+import com.ctacek.f2g.domain.useCases.game.GetGameInfoUseCase
+import com.ctacek.f2g.domain.useCases.game.JoinRoomUseCase
+import com.ctacek.f2g.domain.useCases.game.StartGameUseCase
+import com.ctacek.f2g.domain.useCases.game.StopGameUseCase
 import io.ktor.http.*
 import io.ktor.server.application.*
 import io.ktor.server.auth.*
@@ -7,14 +16,6 @@ import io.ktor.server.auth.jwt.*
 import io.ktor.server.request.*
 import io.ktor.server.response.*
 import io.ktor.server.routing.*
-import com.ctacek.f2g.api.v1.requests.match.AcceptUserRequest
-import com.ctacek.f2g.api.v1.requests.match.JoinRoomRequest
-import com.ctacek.f2g.api.v1.requests.match.KickUserRequest
-import com.ctacek.f2g.domain.repositories.MatchRepository
-import com.ctacek.f2g.domain.repositories.RoomsRepository
-import com.ctacek.f2g.domain.repositories.UsersRepository
-import com.ctacek.f2g.domain.useCases.UseCases
-import com.ctacek.f2g.domain.useCases.game.*
 
 fun Route.configureMatchRoutes(
     useCases: UseCases,
@@ -40,7 +41,6 @@ fun Route.configureMatchRoutes(
                 val res = useCases.joinRoomUseCase(
                     userId = userId,
                     roomId = request.roomId,
-                    wishlist = request.wishlist,
                 )
                 when (res) {
                     JoinRoomUseCase.Result.Failed -> {
@@ -70,114 +70,6 @@ fun Route.configureMatchRoutes(
 
                     JoinRoomUseCase.Result.UserAlreadyInRoom -> {
                         call.respond(HttpStatusCode.Conflict, "User already in room")
-                        return@post
-                    }
-                }
-            }
-        }
-        authenticate {
-            post("/leave") {
-                val userId = call.principal<JWTPrincipal>()?.payload?.getClaim("userId")?.asString() ?: run {
-                    call.respond(HttpStatusCode.Unauthorized, "No access token provided")
-                    return@post
-                }
-
-                val id = call.request.queryParameters["id"] ?: run {
-                    call.respond(HttpStatusCode.BadRequest, "Wrong room id")
-                    return@post
-                }
-
-                val res = useCases.leaveRoomUseCase(
-                    userId = userId,
-                    roomId = id,
-                )
-                when (res) {
-                    LeaveRoomUseCase.Result.Failed -> {
-                        call.respond(HttpStatusCode.InternalServerError, "Something went wrong")
-                        return@post
-                    }
-
-                    LeaveRoomUseCase.Result.GameAlreadyStarted -> {
-                        call.respond(HttpStatusCode.Conflict, "Game already started")
-                        return@post
-                    }
-
-                    LeaveRoomUseCase.Result.RoomNotFound -> {
-                        call.respond(HttpStatusCode.BadRequest, "Room not exists")
-                        return@post
-                    }
-
-                    LeaveRoomUseCase.Result.Successful -> {
-                        call.respond(HttpStatusCode.OK)
-                        return@post
-                    }
-
-                    LeaveRoomUseCase.Result.UserNotFound -> {
-                        call.respond(HttpStatusCode.BadRequest, "User not exists")
-                        return@post
-                    }
-
-                    LeaveRoomUseCase.Result.UserNotInRoom -> {
-                        call.respond(HttpStatusCode.Forbidden, "User not in the room")
-                        return@post
-                    }
-                }
-            }
-        }
-        authenticate {
-            post("/kick") {
-                val userId = call.principal<JWTPrincipal>()?.payload?.getClaim("userId")?.asString() ?: run {
-                    call.respond(HttpStatusCode.Unauthorized, "No access token provided")
-                    return@post
-                }
-
-                val request = call.receiveNullable<KickUserRequest>() ?: run {
-                    call.respond(HttpStatusCode.BadRequest)
-                    return@post
-                }
-                val res = useCases.kickUserUseCase(
-                    selfId = userId,
-                    userId = request.userId,
-                    roomId = request.roomId,
-                )
-                when (res) {
-                    KickUserUseCase.Result.Failed -> {
-                        call.respond(HttpStatusCode.InternalServerError, "Something went wrong")
-                        return@post
-                    }
-
-                    KickUserUseCase.Result.Forbidden -> {
-                        call.respond(HttpStatusCode.Forbidden)
-                        return@post
-                    }
-
-                    KickUserUseCase.Result.GameAlreadyStarted -> {
-                        call.respond(HttpStatusCode.Conflict, "Game already started")
-                        return@post
-                    }
-
-                    KickUserUseCase.Result.RoomNotFound -> {
-                        call.respond(HttpStatusCode.BadRequest, "Room not exists")
-                        return@post
-                    }
-
-                    KickUserUseCase.Result.Successful -> {
-                        call.respond(HttpStatusCode.OK)
-                        return@post
-                    }
-
-                    KickUserUseCase.Result.UserNotFound -> {
-                        call.respond(HttpStatusCode.BadRequest, "User not exists")
-                        return@post
-                    }
-
-                    KickUserUseCase.Result.UserNotInRoom -> {
-                        call.respond(HttpStatusCode.BadRequest, "User not in the room")
-                        return@post
-                    }
-
-                    KickUserUseCase.Result.NotAllowed -> {
-                        call.respond(HttpStatusCode.BadRequest, "You should use /leave instead of /kick")
                         return@post
                     }
                 }
@@ -326,58 +218,6 @@ fun Route.configureMatchRoutes(
                     is GetGameInfoUseCase.Result.Successful -> {
                         call.respond(HttpStatusCode.OK, res.info)
                         return@get
-                    }
-                }
-            }
-        }
-
-        authenticate {
-            post("/accept") {
-                val userId = call.principal<JWTPrincipal>()?.payload?.getClaim("userId")?.asString() ?: run {
-                    call.respond(HttpStatusCode.Unauthorized, "No access token provided")
-                    return@post
-                }
-
-                val request = call.receiveNullable<AcceptUserRequest>() ?: run {
-                    call.respond(HttpStatusCode.BadRequest)
-                    return@post
-                }
-
-                val res = useCases.acceptUserUseCase(
-                    selfId = userId,
-                    userId = request.userId,
-                    roomId = request.roomId,
-                )
-
-                when (res) {
-                    AcceptUserUseCase.Result.Failed -> {
-                        call.respond(HttpStatusCode.InternalServerError, "Something went wrong")
-                        return@post
-                    }
-
-                    AcceptUserUseCase.Result.Forbidden -> {
-                        call.respond(HttpStatusCode.Forbidden)
-                        return@post
-                    }
-
-                    AcceptUserUseCase.Result.RoomNotFound -> {
-                        call.respond(HttpStatusCode.BadRequest, "Room not exists")
-                        return@post
-                    }
-
-                    AcceptUserUseCase.Result.Successful -> {
-                        call.respond(HttpStatusCode.OK)
-                        return@post
-                    }
-
-                    AcceptUserUseCase.Result.UserNotFound -> {
-                        call.respond(HttpStatusCode.BadRequest, "User not exists")
-                        return@post
-                    }
-
-                    AcceptUserUseCase.Result.UserNotInRoom -> {
-                        call.respond(HttpStatusCode.BadRequest, "User not in room")
-                        return@post
                     }
                 }
             }
